# ds-prover-bench

./: .gitignore  .pre-commit-config.yaml  install.sh  main.py  pyproject.toml
src/ds_prover_bench/: benchmark.py
