[project]
name = "ds-prover-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hf-transfer>=0.1.9",
    "pydantic>=2.13.4",
    "setuptools>=82.0.1",
    "torch==2.5.1",
    "transformers==4.46.3",
    "vllm==0.6.4.post1",
]
