[project]
name = "ds-prover-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hf-transfer>=0.1.9",
    "pydantic>=2.13.4",
    "setuptools>=82.0.1",
    "torch==2.5.1",
    "transformers==4.46.3",
    "vllm==0.6.4.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]

[tool.ruff.lint]
select = ["E", "F", "I"]   # E/F = default lint; I = import sorting & grouping

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
